; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20813.c_nslookup_help.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20813.c_nslookup_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"\0ANSLOOKUP help\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [76 x i8] c"To see who is the DNS server for a particular domain, issue the following:\0A\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"        > set type=ns\0A\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"        > xyz.com\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [72 x i8] c"  You will see a list of the name server(s) if completed successfully\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [76 x i8] c"To get a list of all the DNS entries for a particular domain, run nslookup\0A\00", align 1
@.str.6 = private unnamed_addr constant [35 x i8] c"and issue the following commands:\0A\00", align 1
@.str.7 = private unnamed_addr constant [27 x i8] c"         > server 1.1.1.1\0A\00", align 1
@.str.8 = private unnamed_addr constant [42 x i8] c"         > ls -d xyz.com > filename.txt\0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [66 x i8] c"Line 1 sets the server that nslookup will use to resolve a name.\0A\00", align 1
@.str.10 = private unnamed_addr constant [79 x i8] c"Line 2 requires all the information about xyz.com be written to filename.txt\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nslookup_help() #0 {
  %1 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.8, i64 0, i64 0))
  %10 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.9, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str.10, i64 0, i64 0))
  %12 = call i32 @exit(i32 -1) #3
  unreachable
}

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
